# Node

./: .dockerignore  .env.example  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  CONTRIBUTING.md  DEVELOPMENT.md  DOCKER.md  Makefile  README.md  TESTING.md  commitlint.config.js  package.json  requirements-dev.txt  requirements.txt  tsconfig.json  turbo.json
.github/: CI_SETUP_SUMMARY.md  INDEX.md  QUICK_START.md  WORKFLOWS_SUMMARY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: README.md  cache-warmup.yml  ci.yml  dependency-review.yml  pr-validation.yml  publish.yml
.husky/_/: husky.sh
apps/api/: .env.example  .eslintrc.js  README.md  jest.config.js  package.json
apps/api/src/: index.test.ts  index.ts
apps/data-pipeline/: .env.example  README.md  package.json  pyproject.toml  setup.py
apps/data-pipeline/src/pipeline/: main.py
apps/data-pipeline/tests/: __init__.py  test_main.py
apps/web/: README.md  next.config.js  package.json
apps/web/app/: layout.tsx  page.test.tsx  page.tsx
docs/: CI_CD.md  DELIVERABLE_SUMMARY.md  QUICK_START_REVIEWERS.md
docs/architecture/: DATA_SCHEMA_DESIGN.md  DEPENDENCY_GRAPH.md  NFR_SPECIFICATIONS.md  PLATFORM_BLUEPRINT.md  README.md  ROADMAP_VISUAL.md  TECHNOLOGY_DECISIONS.md
infrastructure/docker/: Dockerfile.api  Dockerfile.pipeline  Dockerfile.web  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.yml
infrastructure/terraform/: README.md  main.tf
(+7 files in other folders)
